# rv-forth

./: Cargo.toml  Makefile  link.x  rust-toolchain.toml
.cargo/: config
compiler/: Cargo.toml
compiler/src/: lib.rs  primitives.rs
forth/: Cargo.toml  README.md
forth/src/: hash.rs
repl/: Cargo.toml  Makefile
repl/.cargo/: config
repl/src/: forth.rs  main.rs
src/: allocator.rs  collections.rs  csr.rs  forth.rs  main.rs  state.rs
src/low/: asm.rs  csr.rs  mod.rs  plic.rs  uart.rs
