[package]
name = "forth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
register-interface = { path = "../register-interface/register-interface-macros" }
spin = {version = "0.9.4", default_features=false, features=["spin_mutex","portable_atomic"] }

